lab 4 (вроде надеюсь готово) commit